fix: horizontal scroll on map, landing, zoos pages

--- a/pages/landing/main.css
+++ b/pages/landing/main.css
@@ -11,6 +11,7 @@
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
+   overflow: hidden;
 }
 
 /* sect_1 */
@@ -720,6 +721,7 @@ footer {
    .how-it-works {
       width: 100%;
       height: 1067px;
+      background-position-y: 0%;
    }
 
    .how-it-works__item {
