--- a/pages/map/main.css
+++ b/pages/map/main.css
@@ -7,6 +7,7 @@
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
+   overflow: hidden;
 }
 
 /* header */
